--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,12 +14,13 @@ body {
 }
 
 label {
-  margin-right: 10px;
+  margin: 0 10px;
 }
 
 input { 
   padding: 5px;  
-  font-size: 24pt;
+  font-size: 24pt;    
+  margin: 0 10px;
 }
 
 form {
@@ -35,4 +36,8 @@ button {
   color: black;
   border-radius: 8px;
   font-size: 20pt;
+}
+
+#formatted-text {
+  margin: 0 10px;
 }
